--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,14 @@
 		<div class="row">
 			<img class="text-center" src="/assets/img/burger.png" alt="Burgerz logo">
 		</div>
+		<div class="row">
+			<h1 class="text-center">Eat Da <span class="orange">B</span><span class="green">u</span><span class="yellow">r</span><span class="brown">g</span><span class="red">e</span><span class="green">r</span><span class="orange">z</span></h1>
+		</div>
+	</div>
+	<div class="wrapper">
+	<div class="container">
 		{{{body}}}
+	</div>
 	</div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
